--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="grid-sizer"></div>
     
     <div class="grid-item">
-      <img class="img-responsive" alt="" src="./assets/images/img-12.jpg">
+      <img class="img-responsive" alt="" src="./assets/images/1_Detail of vase sand texture vase 1 anthurium and insect.jpg">
       <a href="./project.html" class="project-description">
         <div class="project-text-holder">
           <div class="project-text-inner">
