--- a/components.html
+++ b/components.html
@@ -39,8 +39,9 @@
     <div class="navbar-collapse" id="navbar-collapse">
       <div class="site-header hidden-xs">
           <a class="site-brand" href="./index.html" title="">
-            <img class="img-responsive site-logo" alt="" src="./assets/images/mashup-logo.svg">
-            Mashup Template
+            <img class="img-responsive site-logo" alt="" src="./assets/images/logo.png"
+                style="height:50px">
+            Pash Pottery and Floristry
           </a>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor.</p>
@@ -50,13 +51,13 @@
         <li><a href="./about.html" title="">About</a></li>
         <li><a href="./services.html" title="">Services</a></li>
         <li><a href="./contact.html" title="">Contact</a></li>
-        <li><a href="./components.html" title="">Components</a></li>
+        
 
       </ul>
 
       <nav class="nav-footer">
         <p class="nav-footer-social-buttons">
-          <a class="fa-icon" href="https://www.instagram.com/" title="">
+          <a class="fa-icon" href="https://www.instagram.com/pashpotteryandfloristry/?hl=enpashpotteryandfloristry/?hl=en" title="">
             <i class="fa fa-instagram"></i>
           </a>
           <a class="fa-icon" href="https://dribbble.com/" title="">
@@ -66,7 +67,7 @@
             <i class="fa fa-twitter"></i>
           </a>
         </p>
-        <p>© Untitled | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
+        <p>© Pash Pottery and Floristry | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
       </nav>  
     </div> 
   </nav>
