--- a/services.html
+++ b/services.html
@@ -1,122 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta content="IE=edge" http-equiv="X-UA-Compatible" />
+    <meta content="width=device-width,initial-scale=1" name="viewport" />
+    <meta content="description" name="description" />
+    <meta name="google" content="notranslate" />
+    <meta
+      content="Mashup templates have been developped by Orson.io team"
+      name="author"
+    />
 
-<head>
-  <meta charset="UTF-8">
-  <meta content="IE=edge" http-equiv="X-UA-Compatible">
-  <meta content="width=device-width,initial-scale=1" name="viewport">
-  <meta content="description" name="description">
-  <meta name="google" content="notranslate" />
-  <meta content="Mashup templates have been developped by Orson.io team" name="author">
+    <!-- Disable tap highlight on IE -->
+    <meta name="msapplication-tap-highlight" content="no" />
 
-  <!-- Disable tap highlight on IE -->
-  <meta name="msapplication-tap-highlight" content="no">
-  
-  <link href="./assets/apple-icon-180x180.png" rel="apple-touch-icon">
-  <link href="./assets/favicon.ico" rel="icon">
+    <link href="./assets/apple-icon-180x180.png" rel="apple-touch-icon" />
+    <link href="./assets/favicon.ico" rel="icon" />
 
+    <title>Title page</title>
 
+    <link href="./main.82cfd66e.css" rel="stylesheet" />
+  </head>
 
-  <title>Title page</title>  
-
-<link href="./main.82cfd66e.css" rel="stylesheet"></head>
-
-<body>
-
- <!-- Add your content of header -->
-<header class="">
-  <div class="navbar navbar-default visible-xs">
-    <button type="button" class="navbar-toggle collapsed">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <a href="./index.html" class="navbar-brand">Mashup Template</a>
-  </div>
-
-  <nav class="sidebar">
-    <div class="navbar-collapse" id="navbar-collapse">
-      <div class="site-header hidden-xs">
-          <a class="site-brand" href="./index.html" title="">
-            <img class="img-responsive site-logo" alt="" src="./assets/images/mashup-logo.svg">
-            Mashup Template
-          </a>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor.</p>
+  <body>
+    <!-- Add your content of header -->
+    <header class="">
+      <div class="navbar navbar-default visible-xs">
+        <button type="button" class="navbar-toggle collapsed">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a href="./index.html" class="navbar-brand">Mashup Template</a>
       </div>
-      <ul class="nav">
-        <li><a href="./index.html" title="">Home</a></li>
-        <li><a href="./about.html" title="">About</a></li>
-        <li><a href="./services.html" title="">Services</a></li>
-        <li><a href="./contact.html" title="">Contact</a></li>
-        <li><a href="./components.html" title="">Components</a></li>
 
-      </ul>
+      <nav class="sidebar">
+        <div class="navbar-collapse" id="navbar-collapse">
+          <div class="site-header hidden-xs">
+            <a class="site-brand" href="./index.html" title="">
+              <img
+                class="img-responsive site-logo"
+                alt=""
+                src="./assets/images/logo.png"
+                style="height: 50px;"
+              />
+              Pash Pottery and Floristry
+            </a>
+            <p>
+              Michelle Pash - I am a Potter and Florist
+            </p>
+          </div>
+          <ul class="nav">
+            <li><a href="./index.html" title="">Home</a></li>
+            <li><a href="./about.html" title="">About</a></li>
+            <li><a href="./services.html" title="">Services</a></li>
+            <li><a href="./contact.html" title="">Contact</a></li>
+          </ul>
 
-      <nav class="nav-footer">
-        <p class="nav-footer-social-buttons">
-          <a class="fa-icon" href="https://www.instagram.com/" title="">
-            <i class="fa fa-instagram"></i>
-          </a>
-          <a class="fa-icon" href="https://dribbble.com/" title="">
-            <i class="fa fa-dribbble"></i>
-          </a>
-          <a class="fa-icon" href="https://twitter.com/" title="">
-            <i class="fa fa-twitter"></i>
-          </a>
-        </p>
-        <p>© Untitled | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
-      </nav>  
-    </div> 
-  </nav>
-</header>
-<main class="" id="main-collapse">
+          <nav class="nav-footer">
+            <p class="nav-footer-social-buttons">
+              <a
+                class="fa-icon"
+                href="https://www.instagram.com/pashpotteryandfloristry/?hl=en"
+                title=""
+              >
+                <i class="fa fa-instagram"></i>
+              </a>
 
+              <a class="fa-icon" href="https://twitter.com/" title="">
+                <i class="fa fa-twitter"></i>
+              </a>
+            </p>
+            <p>
+              © Pash Pottery and Floristry | Website created with
+              <a
+                href="http://www.mashup-template.com/"
+                title="Create website with free html template"
+                >Mashup Template</a
+              >/<a
+                href="https://www.unsplash.com/"
+                title="Beautiful Free Images"
+                >Unsplash</a
+              >
+            </p>
+          </nav>
+        </div>
+      </nav>
+    </header>
+    <main class="" id="main-collapse">
+      <div class="row">
+        <div class="col-xs-12 section-container-spacer">
+          <h1>Services</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. <br />Ut
+            enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+            ut aliquip ex ea commodo consequat.
+          </p>
+        </div>
 
-<div class="row">
-  <div class="col-xs-12 section-container-spacer">
-    <h1>Services</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. <br>Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat.</p>
-  </div>
+        <div class="col-xs-12 col-md-4 section-container-spacer">
+          <img class="img-responsive" alt="" src="./assets/images/3_img.jpg" />
+          <h2>Pottery Services</h2>
+          <p>
+            I make ceramic collections of vases and domestic ware for both
+            public and wholesale to shops. Custom made ceramic commissions are
+            also available.
+          </p>
+          <a href="./contact.html" class="btn btn-primary" title="">
+            Get in touch</a
+          >
+        </div>
 
-  <div class="col-xs-12 col-md-4 section-container-spacer">
-    <img class="img-responsive" alt="" src="./assets/images/img-12.jpg">
-    <h2>Consectetur</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    <a href="./contact.html" class="btn btn-primary" title=""> Get in touch</a>
-  </div>
+        <div class="col-xs-12 col-md-4 section-container-spacer">
+          <img
+            class="img-responsive"
+            alt=""
+            src="./assets/images/workshop.jpg"
+            style="height: 245px;"
+          />
+          <h2>Floristry Workshops</h2>
+          <p>
+            I teach beginners floristry workshops through creative spaces and
+            shops such as Syndicate Creative art-space. Please inquire here or
+            the Syndicate Creative website for up and coming floristry
+            workshops.
+          </p>
+          <a href="./contact.html" class="btn btn-primary" title="">
+            Get in touch</a
+          >
+        </div>
 
-  <div class="col-xs-12 col-md-4 section-container-spacer">
-    <img class="img-responsive" alt="" src="./assets/images/img-13.jpg">
-    <h2>Adipiscing</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    <a href="./contact.html" class="btn btn-primary" title=""> Get in touch</a>
-  </div>
+        <div class="col-xs-12 col-md-4 section-container-spacer">
+          <img class="img-responsive" alt="" src="./assets/images/5_img.jpg" />
+          <h2>Custom Arrangements</h2>
+          <p>
+            Custom made dried floral arrangements are also available by
+            contacting me via this website.
+          </p>
+          <a href="./contact.html" class="btn btn-primary" title="">
+            Get in touch</a
+          >
+        </div>
+      </div>
+    </main>
 
-  <div class="col-xs-12 col-md-4 section-container-spacer">
-    <img class="img-responsive" alt="" src="./assets/images/img-14.jpg">
-    <h2>Dolor</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    <a href="./contact.html" class="btn btn-primary" title=""> Get in touch</a>
-  </div>
+    <script>
+      document.addEventListener("DOMContentLoaded", function (event) {
+        navbarToggleSidebar();
+        navActivePage();
+      });
+    </script>
 
-</div>
-
-
-</main>
-
-<script>
-document.addEventListener("DOMContentLoaded", function (event) {
-  navbarToggleSidebar();
-  navActivePage();
-});
-</script>
-
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
 
 <script>
   (function (i, s, o, g, r, a, m) {
@@ -129,6 +166,7 @@ document.addEventListener("DOMContentLoaded", function (event) {
   ga('send', 'pageview');
 </script>
 
---> <script type="text/javascript" src="./main.85741bff.js"></script></body>
-
+-->
+    <script type="text/javascript" src="./main.85741bff.js"></script>
+  </body>
 </html>
