--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
     <main class="" id="main-collapse">
       <div class="row">
         <div class="col-xs-12 col-md-6">
-          <img class="img-responsive" alt="" src="./assets/images/img-10.jpg" />
+          <img class="img-responsive" alt="" src="./assets/images/michelle.jpg" />
         </div>
         <div class="col-xs-12 col-md-6">
           <h1>About me</h1>
