--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <link href="./assets/apple-icon-180x180.png" rel="apple-touch-icon" />
     <link href="./assets/favicon.ico" rel="icon" />
 
-    <title>Title page</title>
+    <title>Pash Pottery and Floristry</title>
 
     <link href="./main.82cfd66e.css" rel="stylesheet" />
   </head>
@@ -91,7 +91,11 @@
     <main class="" id="main-collapse">
       <div class="row">
         <div class="col-xs-12 col-md-6">
-          <img class="img-responsive" alt="" src="./assets/images/michelle.jpg" />
+          <img
+            class="img-responsive"
+            alt=""
+            src="./assets/images/michelle.jpg"
+          />
         </div>
         <div class="col-xs-12 col-md-6">
           <h1>About me</h1>
