--- a/components.html
+++ b/components.html
@@ -17,7 +17,7 @@
 
 
 
-  <title>Title page</title>  
+  <title>Pash Pottery and Floristry</title>  
 
 <link href="./main.82cfd66e.css" rel="stylesheet"></head>
 
