--- a/services.html
+++ b/services.html
@@ -17,7 +17,7 @@
     <link href="./assets/apple-icon-180x180.png" rel="apple-touch-icon" />
     <link href="./assets/favicon.ico" rel="icon" />
 
-    <title>Title page</title>
+    <title>Pash Pottery and Floristry</title>
 
     <link href="./main.82cfd66e.css" rel="stylesheet" />
   </head>
