comment put form

--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,7 @@
           <div class="section-container-spacer">
             <form action="" class="reveal-content">
               <div class="row">
-                <div class="col-md-6">
+                <!-- <div class="col-md-6">
                   <div class="form-group">
                     <input
                       type="email"
@@ -133,7 +133,7 @@
                   >
                     Send
                   </a>
-                </div>
+                </div> -->
                 <div class="col-md-6">
                   <ul class="list-unstyled address-container">
                     <li>
@@ -146,7 +146,12 @@
                       <span class="fa-icon">
                         <i class="fa fa-at" aria-hidden="true"></i>
                       </span>
+                      <a style="color:#555"
+                    href="mailto:michelle.peteros@gmail.com"
+             
+                  >
                       michelle.peteros@gmail.com
+                      </a>
                     </li>
                     <li>
                       <span class="fa-icon">
