--- a/about.html
+++ b/about.html
@@ -68,8 +68,8 @@
                 <i class="fa fa-instagram"></i>
               </a>
 
-              <a class="fa-icon" href="https://twitter.com/" title="">
-                <i class="fa fa-twitter"></i>
+              <a class="fa-icon" href="mailto:michelle.peteros@gmail.com" title="">
+                <i class="fa fa-envelope"></i>
               </a>
             </p>
             <p>
