--- a/contact.html
+++ b/contact.html
@@ -68,8 +68,9 @@
                 <i class="fa fa-instagram"></i>
               </a>
 
-              <a class="fa-icon" href="https://twitter.com/" title="">
-                <i class="fa fa-twitter"></i>
+              <a class="fa-icon" href="mailto:michelle.peteros@gmail.com" title="">
+                 <i class="fa fa-envelope"></i>
+              </a>
               </a>
             </p>
             <p>
@@ -153,20 +154,16 @@
                       michelle.peteros@gmail.com
                       </a>
                     </li>
-                    <li>
+                    <!-- <li>
                       <span class="fa-icon">
                         <i class="fa fa fa-map-marker" aria-hidden="true"></i>
                       </span>
                       42 rue Moulbert 75016 Paris
-                    </li>
+                    </li> -->
                   </ul>
                   <h3>Follow me on social networks</h3>
-                  <a href="https://www.linkedin.com/" title="" class="fa-icon">
-                    <i class="fa fa-linkedin"></i>
-                  </a>
-                  <a href="https://twitter.com/" title="" class="fa-icon">
-                    <i class="fa fa-twitter"></i>
-                  </a>
+                  
+                  
                   <a
                     href="https://www.instagram.com/pashpotteryandfloristry/?hl=en"
                     title=""
