--- a/services.html
+++ b/services.html
@@ -68,8 +68,9 @@
                 <i class="fa fa-instagram"></i>
               </a>
 
-              <a class="fa-icon" href="https://twitter.com/" title="">
-                <i class="fa fa-twitter"></i>
+              <a class="fa-icon" href="mailto:michelle.peteros@gmail.com" title="">
+                 <i class="fa fa-envelope"></i>
+              </a>
               </a>
             </p>
             <p>
@@ -101,12 +102,14 @@
         </div>
 
         <div class="col-xs-12 col-md-4 section-container-spacer">
-          <img class="img-responsive" alt="" src="./assets/images/3_img.jpg" />
-          <h2>Pottery Services</h2>
+          <img class="img-responsive" alt="" src="./assets/images/workshop_2.jpg" />
+          <h2>Floristry Workshops</h2>
           <p>
-            I make ceramic collections of vases and domestic ware for both
-            public and wholesale to shops. Custom made ceramic commissions are
-            also available.
+            I teach beginners floristry workshops through creative spaces and
+            shops such as Syndicate Creative art-space. Please inquire here or
+            the Syndicate Creative website for up and coming floristry
+            workshops.
+            
           </p>
           <a href="./contact.html" class="btn btn-primary" title="">
             Get in touch</a
@@ -117,15 +120,14 @@
           <img
             class="img-responsive"
             alt=""
-            src="./assets/images/workshop.jpg"
+            src="./assets/images/3_img.jpg"
             style="height: 245px;"
           />
-          <h2>Floristry Workshops</h2>
+          <h2>Pottery Services</h2>
           <p>
-            I teach beginners floristry workshops through creative spaces and
-            shops such as Syndicate Creative art-space. Please inquire here or
-            the Syndicate Creative website for up and coming floristry
-            workshops.
+            I make ceramic collections of vases and domestic ware for both
+            public and wholesale to shops. Custom made ceramic commissions are
+            also available.
           </p>
           <a href="./contact.html" class="btn btn-primary" title="">
             Get in touch</a
