--- a/components.html
+++ b/components.html
@@ -63,8 +63,9 @@
           <a class="fa-icon" href="https://dribbble.com/" title="">
             <i class="fa fa-dribbble"></i>
           </a>
-          <a class="fa-icon" href="https://twitter.com/" title="">
-            <i class="fa fa-twitter"></i>
+          <a class="fa-icon" href="mailto:michelle.peteros@gmail.com" title="">
+             <i class="fa fa-envelope"></i>
+              </a>
           </a>
         </p>
         <p>© Pash Pottery and Floristry | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
@@ -154,7 +155,8 @@
                   </li>
                   <li>
                     <span class="fa-icon">
-                      <i class="fa fa-twitter"></i>
+                       <i class="fa fa-envelope"></i>
+              </a>
                     </span>
                   </li>
                   <li>
