update project page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="./index.html" class="navbar-brand">Mashup Template</a>
+        <a href="./index.html" class="navbar-brand">Pash Pottery and Floristry</a>
       </div>
 
       <nav class="sidebar">
@@ -103,14 +103,14 @@
               alt=""
               src="./assets/images/1_img.jpg"
             />
-            <a href="./project.html" class="project-description">
+            <!-- <a href="./project.html" class="project-description">
               <div class="project-text-holder">
                 <div class="project-text-inner">
                   <h3>Vivamus vestibulum</h3>
                   <p>Discover more</p>
                 </div>
               </div>
-            </a>
+            </a> -->
           </div>
 
           <div class="grid-item">
@@ -119,14 +119,14 @@
               alt=""
               src="./assets/images/2_img.jpg"
             />
-            <a href="./project.html" class="project-description">
+            <!-- <a href="./project.html" class="project-description">
               <div class="project-text-holder">
                 <div class="project-text-inner">
                   <h3>Vivamus vestibulum</h3>
                   <p>Discover more</p>
                 </div>
               </div>
-            </a>
+            </a> -->
           </div>
 
           <div class="grid-item">
@@ -135,14 +135,14 @@
               alt=""
               src="./assets/images/3_img.jpg"
             />
-            <a href="./project.html" class="project-description">
+            <!-- <a href="./project.html" class="project-description">
               <div class="project-text-holder">
                 <div class="project-text-inner">
                   <h3>Vivamus vestibulum</h3>
                   <p>Discover more</p>
                 </div>
               </div>
-            </a>
+            </a> -->
           </div>
           <div class="grid-item">
             <img
@@ -150,14 +150,14 @@
               alt=""
               src="./assets/images/4_img.jpg"
             />
-            <a href="./project.html" class="project-description">
+            <!-- <a href="./project.html" class="project-description">
               <div class="project-text-holder">
                 <div class="project-text-inner">
                   <h3>Vivamus vestibulum</h3>
                   <p>Discover more</p>
                 </div>
               </div>
-            </a>
+            </a> -->
           </div>
 
           <div class="grid-item">
@@ -166,14 +166,14 @@
               alt=""
               src="./assets/images/5_img.jpg"
             />
-            <a href="./project.html" class="project-description">
+            <!-- <a href="./project.html" class="project-description">
               <div class="project-text-holder">
                 <div class="project-text-inner">
                   <h3>Vivamus vestibulum</h3>
                   <p>Discover more</p>
                 </div>
               </div>
-            </a>
+            </a> -->
           </div>
 
           <div class="grid-item">
@@ -182,14 +182,14 @@
               alt=""
               src="./assets/images/6_img.jpg"
             />
-            <a href="./project.html" class="project-description">
+            <!-- <a href="./project.html" class="project-description">
               <div class="project-text-holder">
                 <div class="project-text-inner">
                   <h3>Vivamus vestibulum</h3>
                   <p>Discover more</p>
                 </div>
               </div>
-            </a>
+            </a> -->
           </div>
 
           <div class="grid-item">
@@ -198,14 +198,14 @@
               alt=""
               src="./assets/images/7_img.jpg"
             />
-            <a href="./project.html" class="project-description">
+            <!-- <a href="./project.html" class="project-description">
               <div class="project-text-holder">
                 <div class="project-text-inner">
                   <h3>Vivamus vestibulum</h3>
                   <p>Discover more</p>
                 </div>
               </div>
-            </a>
+            </a> -->
           </div>
           <div class="grid-item">
             <img
@@ -213,14 +213,14 @@
               alt=""
               src="./assets/images/8_img.jpg"
             />
-            <a href="./project.html" class="project-description">
+            <!-- <a href="./project.html" class="project-description">
               <div class="project-text-holder">
                 <div class="project-text-inner">
                   <h3>Vivamus vestibulum</h3>
                   <p>Discover more</p>
                 </div>
               </div>
-            </a>
+            </a> -->
           </div>
         </div>
       </div>
