--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="./index.html" class="navbar-brand">Mashup Template</a>
+        <a href="./index.html" class="navbar-brand">Pash Pottery and Floristry</a>
       </div>
 
       <nav class="sidebar">
@@ -154,12 +154,12 @@
                       michelle.peteros@gmail.com
                       </a>
                     </li>
-                    <!-- <li>
+                    <li>
                       <span class="fa-icon">
                         <i class="fa fa fa-map-marker" aria-hidden="true"></i>
                       </span>
-                      42 rue Moulbert 75016 Paris
-                    </li> -->
+                      Black Mountain QLD
+                    </li>
                   </ul>
                   <h3>Follow me on social networks</h3>
                   
