--- a/about.html
+++ b/about.html
@@ -32,7 +32,9 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="./index.html" class="navbar-brand">Pash Pottery and Floristry</a>
+        <a href="./index.html" class="navbar-brand"
+          >Pash Pottery and Floristry</a
+        >
       </div>
 
       <nav class="sidebar">
@@ -48,7 +50,8 @@
               Pash Pottery and Floristry
             </a>
             <p>
-              Michelle Pash - I am a Potter and Florist
+              Michelle Pash <br />
+              - I am a Potter and Florist
             </p>
           </div>
           <ul class="nav">
@@ -68,7 +71,11 @@
                 <i class="fa fa-instagram"></i>
               </a>
 
-              <a class="fa-icon" href="mailto:michelle.peteros@gmail.com" title="">
+              <a
+                class="fa-icon"
+                href="mailto:michelle.peteros@gmail.com"
+                title=""
+              >
                 <i class="fa fa-envelope"></i>
               </a>
             </p>
