--- a/pottery.html
+++ b/pottery.html
@@ -48,7 +48,7 @@
               Pash Pottery and Floristry
             </a>
             <p>
-              Michelle Pash - I am a Potter and Florist
+              Michelle Pash <br> - I am a Potter and Florist
             </p>
           </div>
           <ul class="nav">
