--- a/components.html
+++ b/components.html
@@ -17,7 +17,7 @@
 
 
 
-  <title>Pash Pottery and Floristry</title>  
+  <title>PASH POTTERY AND FLORISTY</title>  
 
 <link href="./main.82cfd66e.css" rel="stylesheet"></head>
 
@@ -32,7 +32,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a href="./index.html" class="navbar-brand">Pash Pottery and Floristry</a>
+    <a href="./index.html" class="navbar-brand">PASH POTTERY AND FLORISTY</a>
   </div>
 
   <nav class="sidebar">
@@ -41,7 +41,7 @@
           <a class="site-brand" href="./index.html" title="">
             <img class="img-responsive site-logo" alt="" src="./assets/images/logo.png"
                 style="height:50px">
-            Pash Pottery and Floristry
+            PASH POTTERY AND FLORISTY
           </a>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor.</p>
@@ -68,7 +68,7 @@
               </a>
           </a>
         </p>
-        <p>© Pash Pottery and Floristry | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
+        <p>© PASH POTTERY AND FLORISTY | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
       </nav>  
     </div> 
   </nav>
