--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     <link href="./assets/apple-icon-180x180.png" rel="apple-touch-icon" />
     <link href="./assets/favicon.ico" rel="icon" />
 
-    <title>Pash Pottery and Floristry</title>
+    <title>PASH POTTERY AND FLORISTY</title>
 
     <link href="./main.82cfd66e.css" rel="stylesheet" />
   </head>
@@ -32,7 +32,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="./index.html" class="navbar-brand">Pash Pottery and Floristry</a>
+        <a href="./index.html" class="navbar-brand">PASH POTTERY AND FLORISTY</a>
       </div>
 
       <nav class="sidebar">
@@ -45,7 +45,7 @@
                 src="./assets/images/logo.png"
                 style="height: 50px;"
               />
-              Pash Pottery and Floristry
+              PASH POTTERY AND FLORISTY
             </a>
             <p>
               Michelle Pash <br> - I am a Potter and Florist
@@ -74,7 +74,7 @@
               </a>
             </p>
             <p>
-              © Pash Pottery and Floristry | Website created with
+              © PASH POTTERY AND FLORISTY | Website created with
               <a
                 href="http://www.mashup-template.com/"
                 title="Create website with free html template"
@@ -95,10 +95,7 @@
           <div class="section-container-spacer">
             <h1>Contact</h1>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              <br />Ut enim ad minim veniam, quis nostrud exercitation ullamco
-              laboris nisi ut aliquip ex ea commodo consequat.
+              To place an order or inquire about my ceramics, floristry, workshops or other collaborations please get in touch. 
             </p>
           </div>
           <div class="section-container-spacer">
