--- a/pottery.html
+++ b/pottery.html
@@ -17,7 +17,7 @@
     <link href="./assets/apple-icon-180x180.png" rel="apple-touch-icon" />
     <link href="./assets/favicon.ico" rel="icon" />
 
-    <title>Pash Pottery and Floristry</title>
+    <title>PASH POTTERY AND FLORISTY</title>
 
     <link href="./main.82cfd66e.css" rel="stylesheet" />
   </head>
@@ -32,7 +32,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="./index.html" class="navbar-brand">Pash Pottery and Floristry</a>
+        <a href="./index.html" class="navbar-brand">PASH POTTERY AND FLORISTY</a>
       </div>
 
       <nav class="sidebar">
@@ -45,7 +45,7 @@
                 src="./assets/images/logo.png"
                 style="height: 50px;"
               />
-              Pash Pottery and Floristry
+              PASH POTTERY AND FLORISTY
             </a>
             <p>
               Michelle Pash <br> - I am a Potter and Florist
@@ -74,7 +74,7 @@
               </a>
             </p>
             <p>
-              © Pash Pottery and Floristry | Website created with
+              © PASH POTTERY AND FLORISTY | Website created with
               <a
                 href="http://www.mashup-template.com/"
                 title="Create website with free html template"
@@ -95,7 +95,9 @@
           <div class="section-container-spacer">
             <h1>Pottery</h1>
             <p>
-              I make ceramic collections of vases and domestic ware for both public and wholesale to shops. Custom made ceramic commissions are also available. 
+              I specialise in wheel throwing and use the technique of throwing pottery on the wheel to create unique and refined forms. With my larger ceramics, I create work using slab and coil techniques. The major focus in all my work is form and function. 
+
+Please contact me via this site if you are interested in my ceramics for purchase to both the public or wholesale for shops. I also take pottery commissions if there is something specific you would like made. 
             </p>
           </div>
 
