--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <link href="./assets/apple-icon-180x180.png" rel="apple-touch-icon" />
     <link href="./assets/favicon.ico" rel="icon" />
 
-    <title>Pash Pottery and Floristry</title>
+    <title>PASH POTTERY AND FLORISTY</title>
 
     <link href="./main.82cfd66e.css" rel="stylesheet" />
   </head>
@@ -33,7 +33,7 @@
           <span class="icon-bar"></span>
         </button>
         <a href="./index.html" class="navbar-brand"
-          >Pash Pottery and Floristry</a
+          >PASH POTTERY AND FLORISTY</a
         >
       </div>
 
@@ -47,7 +47,7 @@
                 src="./assets/images/logo.png"
                 style="height: 50px;"
               />
-              Pash Pottery and Floristry
+              PASH POTTERY AND FLORISTY
             </a>
             <p>
               Michelle Pash <br />
@@ -80,7 +80,7 @@
               </a>
             </p>
             <p>
-              © Pash Pottery and Floristry | Website created with
+              © PASH POTTERY AND FLORISTY | Website created with
               <a
                 href="http://www.mashup-template.com/"
                 title="Create website with free html template"
@@ -108,7 +108,7 @@
           <h1>About me</h1>
 
           <p>
-            My name is Michelle Pash, I run Pash Pottery and Floristry. I am a
+            My name is Michelle Pash, I run PASH POTTERY AND FLORISTY. I am a
             potter and florist. My current motivation in pottery is
             experimenting with wheel throwing and creating unusual ceramics
             forms. As a floral artist, I wish to create timeless flower
