--- a/workshop.html
+++ b/workshop.html
@@ -17,7 +17,7 @@
     <link href="./assets/apple-icon-180x180.png" rel="apple-touch-icon" />
     <link href="./assets/favicon.ico" rel="icon" />
 
-    <title>Pash Pottery and Floristry</title>
+    <title>PASH POTTERY AND FLORISTY</title>
 
     <link href="./main.82cfd66e.css" rel="stylesheet" />
   </head>
@@ -32,7 +32,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="./index.html" class="navbar-brand">Pash Pottery and Floristry</a>
+        <a href="./index.html" class="navbar-brand">PASH POTTERY AND FLORISTY</a>
       </div>
 
       <nav class="sidebar">
@@ -45,7 +45,7 @@
                 src="./assets/images/logo.png"
                 style="height: 50px;"
               />
-              Pash Pottery and Floristry
+              PASH POTTERY AND FLORISTY
             </a>
             <p>
               Michelle Pash <br> - I am a Potter and Florist
@@ -74,7 +74,7 @@
               </a>
             </p>
             <p>
-              © Pash Pottery and Floristry | Website created with
+              © PASH POTTERY AND FLORISTY | Website created with
               <a
                 href="http://www.mashup-template.com/"
                 title="Create website with free html template"
@@ -95,7 +95,7 @@
           <div class="section-container-spacer">
             <h1>Floristry</h1>
             <p>
-              I teach beginners floristry workshops through creative spaces and shops such as Syndicate Creative art-space. Please inquire here or the Syndicate Creative website for up and coming floristry workshops. 
+              I am a qualified florist and have worked in floristry for over 5 years in florist shops in Brisbane and Melbourne.  In my beginner's floristry workshops, I hand select beautiful and unique seasonal flowers and foliage for myself and my class to work with. The floristry workshop is one of my favourite projects as it is light-hearted and fun sharing the experience of admiring and working with flowers. In my workshop not only do you get to take flowers home for the same price as most arrangements but you also learn new skills in caring for and arranging flowers and foliage. 
             </p>
           </div>
 
