--- a/about.html
+++ b/about.html
@@ -16,6 +16,10 @@
 
     <link href="./assets/apple-icon-180x180.png" rel="apple-touch-icon" />
     <link href="./assets/favicon.ico" rel="icon" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Spartan:wght@200&display=swap"
+      rel="stylesheet"
+    />
 
     <title>PASH POTTERY AND FLORISTY</title>
 
@@ -32,7 +36,10 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="./index.html" class="navbar-brand"
+        <a
+          href="./index.html"
+          class="navbar-brand"
+          style="font-family: 'Spartan', sans-serif;"
           >PASH POTTERY AND FLORISTY</a
         >
       </div>
