--- a/about.html
+++ b/about.html
@@ -36,10 +36,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a
-          href="./index.html"
-          class="navbar-brand"
-          style="font-family: 'Spartan', sans-serif;"
+        <a href="./index.html" class="navbar-brand"
           >PASH POTTERY AND FLORISTY</a
         >
       </div>
