--- a/pottery.html
+++ b/pottery.html
@@ -95,7 +95,7 @@
           <div class="section-container-spacer">
             <h1>Pottery</h1>
             <p>
-              I specialise in wheel throwing and use the technique of throwing pottery on the wheel to create unique and refined forms. With my larger ceramics, I create work using slab and coil techniques. The major focus in all my work is form and function. 
+              I specialise in wheel throwing and use the technique of throwing pottery on the wheel to create unique and refined forms. With my larger ceramics, I create work using slab and coil techniques. The major focus in all my work is form and function. <br/>
 
 Please contact me via this site if you are interested in my ceramics for purchase to both the public or wholesale for shops. I also take pottery commissions if there is something specific you would like made. 
             </p>
