change to captal

--- a/about.html
+++ b/about.html
@@ -59,10 +59,10 @@
             </p>
           </div>
           <ul class="nav">
-            <li><a href="./index.html" title="">Home</a></li>
-            <li><a href="./about.html" title="">About</a></li>
-            <li><a href="./services.html" title="">Services</a></li>
-            <li><a href="./contact.html" title="">Contact</a></li>
+            <li><a href="./index.html" title="">HOME</a></li>
+            <li><a href="./about.html" title="">ABOUT</a></li>
+            <li><a href="./services.html" title="">SERVICES</a></li>
+            <li><a href="./contact.html" title="">CONTACT</a></li>
           </ul>
 
           <nav class="nav-footer">
@@ -109,7 +109,7 @@
           />
         </div>
         <div class="col-xs-12 col-md-6">
-          <h1>About me</h1>
+          <h1>ABOUT ME</h1>
 
           <p>
             My name is Michelle Pash, I run PASH POTTERY AND FLORISTY. I am a
