--- a/custom.html
+++ b/custom.html
@@ -52,10 +52,10 @@
             </p>
           </div>
           <ul class="nav">
-            <li><a href="./index.html" title="">Home</a></li>
-            <li><a href="./about.html" title="">About</a></li>
-            <li><a href="./services.html" title="">Services</a></li>
-            <li><a href="./contact.html" title="">Contact</a></li>
+            <li><a href="./index.html" title="">HOME</a></li>
+            <li><a href="./about.html" title="">ABOUT</a></li>
+            <li><a href="./services.html" title="">SERVICES</a></li>
+            <li><a href="./contact.html" title="">CONTACT</a></li>
           </ul>
 
           <nav class="nav-footer">
@@ -93,7 +93,7 @@
       <div class="row">
         <div class="col-xs-12 col-md-8">
           <div class="section-container-spacer">
-            <h1>Custom Arrangements</h1>
+            <h1>CUSTOM FLORAL ARRANGEMENTS</h1>
             <p>
               I am a qualified florist and have worked in floristry for over 5 years in florist shops in Brisbane and Melbourne. The aesthetic of my floristry is naturalistic and I often used dried and found natural materials in my arrangements. For floristry inquiries and orders please contact me via this site. 
             </p>
