--- a/pottery.html
+++ b/pottery.html
@@ -52,10 +52,10 @@
             </p>
           </div>
           <ul class="nav">
-            <li><a href="./index.html" title="">Home</a></li>
-            <li><a href="./about.html" title="">About</a></li>
-            <li><a href="./services.html" title="">Services</a></li>
-            <li><a href="./contact.html" title="">Contact</a></li>
+            <li><a href="./index.html" title="">HOME</a></li>
+            <li><a href="./about.html" title="">ABOUT</a></li>
+            <li><a href="./services.html" title="">SERVICES</a></li>
+            <li><a href="./contact.html" title="">CONTACT</a></li>
           </ul>
 
           <nav class="nav-footer">
@@ -93,7 +93,7 @@
       <div class="row">
         <div class="col-xs-12 col-md-8">
           <div class="section-container-spacer">
-            <h1>Pottery</h1>
+            <h1>POTTERY</h1>
             <p>
               I specialise in wheel throwing and use the technique of throwing pottery on the wheel to create unique and refined forms. With my larger ceramics, I create work using slab and coil techniques. The major focus in all my work is form and function. <br/>
 
