--- a/services.html
+++ b/services.html
@@ -52,10 +52,10 @@
             </p>
           </div>
           <ul class="nav">
-            <li><a href="./index.html" title="">Home</a></li>
-            <li><a href="./about.html" title="">About</a></li>
-            <li><a href="./services.html" title="">Services</a></li>
-            <li><a href="./contact.html" title="">Contact</a></li>
+            <li><a href="./index.html" title="">HOME</a></li>
+            <li><a href="./about.html" title="">ABOUT</a></li>
+            <li><a href="./services.html" title="">SERVICES</a></li>
+            <li><a href="./contact.html" title="">CONTACT</a></li>
           </ul>
 
           <nav class="nav-footer">
@@ -92,7 +92,7 @@
     <main class="" id="main-collapse">
       <div class="row">
         <div class="col-xs-12 section-container-spacer">
-          <h1>Services</h1>
+          <h1>SERVICES</h1>
           <!-- <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. <br />Ut
@@ -115,7 +115,7 @@
               </div>
             </a>
           </div>
-          <h2>Floristry Workshops</h2>
+          <h2>FLORISTRY WORKSHOPS</h2>
           <p>
             I teach beginners floristry workshops through creative spaces and
             shops such as Syndicate Creative art-space. Please inquire here or
@@ -147,7 +147,7 @@
               </div>
             </a>
           </div>
-          <h2>Pottery Services</h2>
+          <h2>POTTERY</h2>
           <p>
             I make ceramic collections of vases and domestic ware for both
             public and wholesale to shops. Custom made ceramic commissions are
@@ -172,7 +172,7 @@
               </div>
             </a>
             </div>
-          <h2>Custom Arrangements</h2>
+          <h2>CUSTOM FLORAL ARRANGEMENTS</h2>
           <p>
             Custom made dried floral arrangements are also available by
             contacting me via this website.
