--- a/workshop.html
+++ b/workshop.html
@@ -52,10 +52,10 @@
             </p>
           </div>
           <ul class="nav">
-            <li><a href="./index.html" title="">Home</a></li>
-            <li><a href="./about.html" title="">About</a></li>
-            <li><a href="./services.html" title="">Services</a></li>
-            <li><a href="./contact.html" title="">Contact</a></li>
+            <li><a href="./index.html" title="">HOME</a></li>
+            <li><a href="./about.html" title="">ABOUT</a></li>
+            <li><a href="./services.html" title="">SERVICES</a></li>
+            <li><a href="./contact.html" title="">CONTACT</a></li>
           </ul>
 
           <nav class="nav-footer">
@@ -93,9 +93,9 @@
       <div class="row">
         <div class="col-xs-12 col-md-8">
           <div class="section-container-spacer">
-            <h1>Floristry</h1>
+            <h1>FLORISTRY WORKSHOPS</h1>
             <p>
-              I am a qualified florist and have worked in floristry for over 5 years in florist shops in Brisbane and Melbourne.  In my beginner's floristry workshops, I hand select beautiful and unique seasonal flowers and foliage for myself and my class to work with. The floristry workshop is one of my favourite projects as it is light-hearted and fun sharing the experience of admiring and working with flowers. In my workshop not only do you get to take flowers home for the same price as most arrangements but you also learn new skills in caring for and arranging flowers and foliage. 
+              I am a qualified florist and have worked in floristry for over 5 years in florist shops in Brisbane and Melbourne.  In my beginner's floristry workshops, I hand select beautiful and unique seasonal flowers and foliage for myself and my class to work with. The floristry workshop is one of my favourite projects as it is light-hearted and fun sharing the experience of admiring and working with flowers. In my workshop not only do you get to take flowers HOME for the same price as most arrangements but you also learn new skills in caring for and arranging flowers and foliage. 
             </p>
           </div>
 
