--- a/contact.html
+++ b/contact.html
@@ -52,10 +52,10 @@
             </p>
           </div>
           <ul class="nav">
-            <li><a href="./index.html" title="">Home</a></li>
-            <li><a href="./about.html" title="">About</a></li>
-            <li><a href="./services.html" title="">Services</a></li>
-            <li><a href="./contact.html" title="">Contact</a></li>
+            <li><a href="./index.html" title="">HOME</a></li>
+            <li><a href="./about.html" title="">ABOUT</a></li>
+            <li><a href="./services.html" title="">SERVICES</a></li>
+            <li><a href="./contact.html" title="">CONTACT</a></li>
           </ul>
 
           <nav class="nav-footer">
@@ -93,7 +93,7 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="section-container-spacer">
-            <h1>Contact</h1>
+            <h1>CONTACT</h1>
             <p>
               To place an order or inquire about my ceramics, floristry, workshops or other collaborations please get in touch. 
             </p>
