--- a/sample/sample-page.html
+++ b/sample/sample-page.html
@@ -52,10 +52,10 @@
             </p>
           </div>
           <ul class="nav">
-            <li><a href="./index.html" title="">Home</a></li>
-            <li><a href="./about.html" title="">About</a></li>
-            <li><a href="./services.html" title="">Services</a></li>
-            <li><a href="./contact.html" title="">Contact</a></li>
+            <li><a href="./index.html" title="">HOME</a></li>
+            <li><a href="./about.html" title="">ABOUT</a></li>
+            <li><a href="./services.html" title="">SERVICES</a></li>
+            <li><a href="./contact.html" title="">CONTACT</a></li>
           </ul>
 
           <nav class="nav-footer">
