--- a/about.html
+++ b/about.html
@@ -59,6 +59,9 @@
             <li><a href="./about.html" title="">ABOUT</a></li>
             <li><a href="./services.html" title="">SERVICES</a></li>
             <li><a href="./contact.html" title="">CONTACT</a></li>
+            <li><a href="./workshop.html" title="">FLORISTRY WORKSHOPS</a></li>
+            <li><a href="./pottery.html" title="">POTTERY</a></li>
+            <li><a href="./custom.html" title="">CUSTOM FLORAL ARRANGEMENTS</a></li>
           </ul>
 
           <nav class="nav-footer">
