delete service page

--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
           <ul class="nav">
             <li><a href="./index.html" title="">HOME</a></li>
             <li><a href="./about.html" title="">ABOUT</a></li>
-            <li><a href="./services.html" title="">SERVICES</a></li>
+            <!-- <li><a href="./services.html" title="">SERVICES</a></li> -->
             <li><a href="./workshop.html" title="">FLORISTRY WORKSHOPS</a></li>
             <li><a href="./pottery.html" title="">POTTERY</a></li>
             <li><a href="./custom.html" title="">CUSTOM FLORAL ARRANGEMENTS</a></li>
