fix typo & new logo

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
       rel="stylesheet"
     />
 
-    <title>PASH POTTERY AND FLORISTY</title>
+    <title>PASH POTTERY AND FLORISTRY</title>
 
     <link href="./main.82cfd66e.css" rel="stylesheet" />
   </head>
@@ -37,7 +37,7 @@
           <span class="icon-bar"></span>
         </button>
         <a href="./index.html" class="navbar-brand"
-          >PASH POTTERY AND FLORISTY</a
+          >PASH POTTERY AND FLORISTRY</a
         >
       </div>
 
@@ -51,7 +51,7 @@
                 src="./assets/images/logo.png"
                 style="height: 50px;"
               />
-              PASH POTTERY AND FLORISTY
+              PASH POTTERY AND FLORISTRY
             </a>
           </div>
           <ul class="nav">
@@ -60,7 +60,9 @@
             <!-- <li><a href="./services.html" title="">SERVICES</a></li> -->
             <li><a href="./workshop.html" title="">FLORISTRY WORKSHOPS</a></li>
             <li><a href="./pottery.html" title="">POTTERY</a></li>
-            <li><a href="./custom.html" title="">CUSTOM FLORAL ARRANGEMENTS</a></li>
+            <li>
+              <a href="./custom.html" title="">CUSTOM FLORAL ARRANGEMENTS</a>
+            </li>
             <li><a href="./contact.html" title="">CONTACT</a></li>
           </ul>
 
@@ -83,7 +85,7 @@
               </a>
             </p>
             <p>
-              © PASH POTTERY AND FLORISTY | Website created with
+              © PASH POTTERY AND FLORISTRY | Website created with
               <a
                 href="http://www.mashup-template.com/"
                 title="Create website with free html template"
@@ -111,7 +113,7 @@
           <h3>ABOUT ME</h3>
 
           <p>
-            My name is Michelle Pash, I run PASH POTTERY AND FLORISTY. I am a
+            My name is Michelle Pash, I run PASH POTTERY AND FLORISTRY. I am a
             potter and florist. My current motivation in pottery is
             experimenting with wheel throwing and creating unusual ceramics
             forms. As a floral artist, I wish to create timeless flower
