--- a/pottery.html
+++ b/pottery.html
@@ -17,7 +17,7 @@
     <link href="./assets/apple-icon-180x180.png" rel="apple-touch-icon" />
     <link href="./assets/favicon.ico" rel="icon" />
 
-    <title>PASH POTTERY AND FLORISTY</title>
+    <title>PASH POTTERY AND FLORISTRY</title>
 
     <link href="./main.82cfd66e.css" rel="stylesheet" />
   </head>
@@ -32,7 +32,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="./index.html" class="navbar-brand">PASH POTTERY AND FLORISTY</a>
+        <a href="./index.html" class="navbar-brand">PASH POTTERY AND FLORISTRY</a>
       </div>
 
       <nav class="sidebar">
@@ -45,7 +45,7 @@
                 src="./assets/images/logo.png"
                 style="height: 50px;"
               />
-              PASH POTTERY AND FLORISTY
+              PASH POTTERY AND FLORISTRY
             </a>
             
           </div>
@@ -75,7 +75,7 @@
               </a>
             </p>
             <p>
-              © PASH POTTERY AND FLORISTY | Website created with
+              © PASH POTTERY AND FLORISTRY | Website created with
               <a
                 href="http://www.mashup-template.com/"
                 title="Create website with free html template"
